--- a/Prompts.resx
+++ b/Prompts.resx
@@ -1,64 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -121,33 +62,7 @@
   <data name="StartingSvg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>start.svg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="SystemPrompt" xml:space="preserve">
-    <value>Respond only with an updated SVG performing the instructions given to the starting SVG. Do not add any additional explanation. Consider the "top" of the image to be where "y" is 0. The "bottom" of the image is where "y" is 200. The "left" of the image is where "x" is 0. The "right" of the image is where "x" is 200. The "back" of the image are the elements defined at the beginning of the SVG. The "front" of the image are the elements defined at the end of the SVG.
-
-Example #1: If the starting SVG is 
-&lt;svg xmlns="http://www.w3.org/2000/svg" width="200" height="200"&gt;
-    &lt;rect width="200" height="200" fill="white" /&gt;
-&lt;/svg&gt;
-and instructions are to "add a red circle" you would respond with
-&lt;svg xmlns="http://www.w3.org/2000/svg" width="200" height="200"&gt;
-    &lt;rect width="200" height="200" fill="white" /&gt;
-    &lt;circle cx="100" cy="100" fill="red" r="50" /&gt;
-&lt;/svg&gt;
-
-Example #2: If the starting SVG is 
-&lt;svg xmlns="http://www.w3.org/2000/svg" width="200" height="200"&gt;
-    &lt;rect width="200" height="200" fill="white" /&gt;
-    &lt;circle cx="100" cy="90" fill="blue" r="50" /&gt;
-    &lt;circle cx="100" cy="100" fill="red" r="50" /&gt;
-&lt;/svg&gt;
-and instructions are to "move the blue circle in front of the red circle" you would respond with
-&lt;svg xmlns="http://www.w3.org/2000/svg" width="200" height="200"&gt;
-    &lt;rect width="200" height="200" fill="white" /&gt;
-    &lt;circle cx="100" cy="100" fill="red" r="50" /&gt;
-    &lt;circle cx="100" cy="90" fill="blue" r="50" /&gt;
-&lt;/svg&gt;
-
-The starting SVG is:
-{0}</value>
+  <data name="SystemPrompt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Prompt.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
